Задание: Уровень "Новичок" в коде ControlSystem измените режим на недопустимый (два зелёных) и выполните все ячейки. Убедитесь, что монитор безопасности заблокировал сообщение, как нарушающее политику безопасности

--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -449,7 +449,7 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode = {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
+        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"green\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event = Event(source=self.__class__.__name__,\n",
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -594,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -606,12 +606,15 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "05127258-8fb9-4141-d208-720fea50096f"
+        "outputId": "bb7bd340-8f64-4eae-d777-e3b59adbaf90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[монитор] регистрируем сущность ControlSystem\n",
             "[монитор] регистрируем сущность LightsGPIO\n"
@@ -663,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -675,23 +678,24 @@
           "type": "CODE"
         },
         "id": "PSplikk24-pY",
-        "outputId": "a301d480-e597-4975-a0af-8e28cb549dbf"
+        "outputId": "ab296a74-8407-4578-e54f-b5786340a311",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[монитор] старт\n",
+            "\n",
             "[ControlSystem] старт[ControlSystem] отправляем тестовый запрос\n",
-            "\n",
-            "[LightsGPIO] старт[ControlSystem] завершение работы\n",
-            "\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'green'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"green\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"green\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"green\"}!\n",
+            "[ControlSystem] завершение работы\n",
+            "[LightsGPIO] старт\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"green\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'green'}\n",
+            "[монитор] событие не разрешено политиками безопасности\n",
             "[LightsGPIO] завершение работы\n"
           ]
         }
@@ -723,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -734,19 +738,9 @@
           },
           "type": "CODE"
         },
-        "id": "E7Ixg4g74-pY",
-        "outputId": "d3b4cd42-d2e4-4a27-c406-6486dbf1af00"
+        "id": "E7Ixg4g74-pY"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
-            "[монитор] завершение работы\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "monitor.stop()\n",
         "control_system.join()\n",
