Уровень "Новичок" измените политики безопасности так, чтобы был возможен режим "моргающий жёлтый" (yellow_blinking), переводящий перекрёсток в режим нерегулируемого

--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 20,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 22,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -265,6 +265,7 @@
         "    {\"direction_1\": \"off\", \"direction_2\": \"off\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
+        "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"},\n",
         "]\n",
         "\n",
         "\n",
@@ -410,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 23,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -449,7 +450,7 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"green\"}\n",
+        "        mode = {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event = Event(source=self.__class__.__name__,\n",
@@ -484,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 24,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -554,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 25,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -594,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 26,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -606,7 +607,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "bb7bd340-8f64-4eae-d777-e3b59adbaf90",
+        "outputId": "a6129475-2fac-4aa3-e404-89fe27b698c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -666,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 27,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -678,7 +679,7 @@
           "type": "CODE"
         },
         "id": "PSplikk24-pY",
-        "outputId": "ab296a74-8407-4578-e54f-b5786340a311",
+        "outputId": "20cecec3-2044-4bc5-abfd-66ab080728f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -688,15 +689,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[монитор] старт\n",
+            "[монитор] старт[ControlSystem] старт\n",
             "\n",
-            "[ControlSystem] старт[ControlSystem] отправляем тестовый запрос\n",
-            "[ControlSystem] завершение работы\n",
+            "[ControlSystem] отправляем тестовый запрос\n",
             "[LightsGPIO] старт\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"green\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'green'}\n",
-            "[монитор] событие не разрешено политиками безопасности\n",
-            "[LightsGPIO] завершение работы\n"
+            "[ControlSystem] завершение работы\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'yellow_blinking', 'direction_2': 'yellow_blinking'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}')\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}!\n",
+            "[LightsGPIO] завершение работы\n",
+            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
+            "[монитор] завершение работы\n"
           ]
         }
       ],
@@ -727,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 28,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
