--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 363,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 364,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 365,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -266,6 +266,10 @@
         "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
         "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
         "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"turn_left\"},\n",
+        "    {\"direction_1\": \"turn_left\", \"direction_2\": \"green\"},\n",
+        "    {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"},\n",
         "]\n",
         "\n",
         "\n",
@@ -319,6 +323,12 @@
         "        if event.source == \"ControlSystem\" \\\n",
         "                and event.destination == \"LightsGPIO\" \\\n",
         "                and event.operation == \"set_mode\" \\\n",
+        "                and self._check_mode(event.parameters):\n",
+        "            authorized = True\n",
+        "\n",
+        "        if event.source == \"SelfDiagnostics\" \\\n",
+        "                and event.destination == \"LightsGPIO\" \\\n",
+        "                and event.operation == \"diagnostics_mode\" \\\n",
         "                and self._check_mode(event.parameters):\n",
         "            authorized = True\n",
         "\n",
@@ -411,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 366,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -450,7 +460,7 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode = {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}\n",
+        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"green\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event = Event(source=self.__class__.__name__,\n",
@@ -459,7 +469,30 @@
         "                      parameters=json.dumps(mode)\n",
         "                      )\n",
         "\n",
+        "        mode_2 = {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}\n",
+        "\n",
+        "        event_2 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode_2)\n",
+        "                      )\n",
+        "        mode_3 = {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
+        "\n",
+        "        event_3 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='set_mode',\n",
+        "                      parameters=json.dumps(mode_3)\n",
+        "                      )\n",
+        "        mode_4 = {}\n",
+        "        event_3 = Event(source=self.__class__.__name__,\n",
+        "                      destination='LightsGPIO',\n",
+        "                      operation='diagnostics_mode',\n",
+        "                      parameters=json.dumps(mode_4)\n",
+        "                      )\n",
+        "\n",
         "        self.monitor_queue.put(event)\n",
+        "        self.monitor_queue.put(event_2)\n",
+        "        self.monitor_queue.put(event_3)\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
     },
@@ -485,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 367,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -528,12 +561,55 @@
         "                if event.operation == \"set_mode\":\n",
         "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
         "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
-        "                    break\n",
+        "                    sleep(0.2)\n",
+        "                    attempts -= 1\n",
         "            except Empty:\n",
         "                sleep(0.2)\n",
         "                attempts -= 1\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Сучность SelfDiagnostics\n",
+        "сущность само-диагностики"
+      ],
+      "metadata": {
+        "id": "BFTDm_yRRA3-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from multiprocessing import Queue, Process\n",
+        "import json\n",
+        "\n",
+        "\n",
+        "class SelfDiagnostics(Process):\n",
+        "\n",
+        "    def __init__(self, monitor_queue: Queue):\n",
+        "        # вызываем конструктор базового класса\n",
+        "        super().__init__()\n",
+        "        # мы знаем только очередь монитора безопасности для взаимодействия с другими сущностями\n",
+        "        # прямая отправка сообщений в другую сущность запрещена в концепции FLASK\n",
+        "        self.monitor_queue = monitor_queue\n",
+        "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
+        "        self._own_queue = Queue()\n",
+        "\n",
+        "    def entity_queue(self):\n",
+        "        return self._own_queue\n",
+        "\n",
+        "    # основной код сущности\n",
+        "    def run(self):\n",
+        "      print(f'[{self.__class__.__name__}] завершение работы')\n",
+        ""
+      ],
+      "metadata": {
+        "id": "OU4QLeivROiP"
+      },
+      "execution_count": 368,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -555,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 369,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -572,7 +648,8 @@
       "source": [
         "monitor = Monitor(monitor_events_queue)\n",
         "control_system = ControlSystem(monitor_events_queue)\n",
-        "lights_gpio = LightsGPIO(monitor_events_queue)"
+        "lights_gpio = LightsGPIO(monitor_events_queue)\n",
+        "self_diagnostics = SelfDiagnostics(monitor_events_queue)"
       ]
     },
     {
@@ -595,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 370,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -607,7 +684,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "a6129475-2fac-4aa3-e404-89fe27b698c1",
+        "outputId": "1d6bba60-0ecb-4e6e-9f55-fc8f8ac82bb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -618,13 +695,15 @@
           "name": "stdout",
           "text": [
             "[монитор] регистрируем сущность ControlSystem\n",
-            "[монитор] регистрируем сущность LightsGPIO\n"
+            "[монитор] регистрируем сущность LightsGPIO\n",
+            "[монитор] регистрируем сущность SelfDiagnostics\n"
           ]
         }
       ],
       "source": [
         "monitor.add_entity_queue(control_system.__class__.__name__, control_system.entity_queue())\n",
-        "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())"
+        "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())\n",
+        "monitor.add_entity_queue(self_diagnostics.__class__.__name__,self_diagnostics.entity_queue())"
       ]
     },
     {
@@ -667,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 371,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -679,7 +758,7 @@
           "type": "CODE"
         },
         "id": "PSplikk24-pY",
-        "outputId": "20cecec3-2044-4bc5-abfd-66ab080728f6",
+        "outputId": "3e9e06ff-2292-4414-8054-e0e967d28cd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -691,14 +770,20 @@
           "text": [
             "[монитор] старт[ControlSystem] старт\n",
             "\n",
-            "[ControlSystem] отправляем тестовый запрос\n",
-            "[LightsGPIO] старт\n",
+            "[LightsGPIO] старт[ControlSystem] отправляем тестовый запрос\n",
+            "\n",
+            "[SelfDiagnostics] завершение работы\n",
             "[ControlSystem] завершение работы\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'yellow_blinking', 'direction_2': 'yellow_blinking'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"}!\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"green\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'green'}\n",
+            "[монитор] событие не разрешено политиками безопасности\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'turn_right'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}')\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='diagnostics_mode', parameters='{}')\n",
+            "[монитор] событие не разрешено политиками безопасности\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}!\n",
             "[LightsGPIO] завершение работы\n",
             "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
             "[монитор] завершение работы\n"
@@ -709,6 +794,7 @@
         "monitor.start()\n",
         "control_system.start()\n",
         "lights_gpio.start()\n",
+        "self_diagnostics.start()\n",
         "sleep(2)"
       ]
     },
@@ -732,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 372,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -750,6 +836,7 @@
         "monitor.stop()\n",
         "control_system.join()\n",
         "lights_gpio.join()\n",
+        "self_diagnostics.join()\n",
         "monitor.join()"
       ]
     },
