--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 363,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 364,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 365,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -303,6 +303,8 @@
         "            mode_ok = False\n",
         "        return mode_ok\n",
         "\n",
+        "\n",
+        "\n",
         "    # проверка политик безопасности\n",
         "    def _check_policies(self, event):\n",
         "        print(f'[монитор] обрабатываем событие {event}')\n",
@@ -327,10 +329,11 @@
         "            authorized = True\n",
         "\n",
         "        if event.source == \"SelfDiagnostics\" \\\n",
-        "                and event.destination == \"LightsGPIO\" \\\n",
-        "                and event.operation == \"diagnostics_mode\" \\\n",
-        "                and self._check_mode(event.parameters):\n",
-        "            authorized = True\n",
+        "              and event.destination == \"LightsGPIO\" \\\n",
+        "              and event.operation == \"send_conditions\" :\n",
+        "          authorized = True\n",
+        "\n",
+        "\n",
         "\n",
         "        if authorized is False:\n",
         "            print(\"[монитор] событие не разрешено политиками безопасности\")\n",
@@ -421,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 366,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -483,16 +486,12 @@
         "                      operation='set_mode',\n",
         "                      parameters=json.dumps(mode_3)\n",
         "                      )\n",
-        "        mode_4 = {}\n",
-        "        event_3 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='diagnostics_mode',\n",
-        "                      parameters=json.dumps(mode_4)\n",
-        "                      )\n",
         "\n",
-        "        self.monitor_queue.put(event)\n",
-        "        self.monitor_queue.put(event_2)\n",
+        "\n",
+        "        # self.monitor_queue.put(event)\n",
+        "        # self.monitor_queue.put(event_2)\n",
         "        self.monitor_queue.put(event_3)\n",
+        "\n",
         "        print(f'[{self.__class__.__name__}] завершение работы')"
       ]
     },
@@ -518,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 367,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -539,7 +538,7 @@
         "\n",
         "class LightsGPIO(Process):\n",
         "\n",
-        "    def __init__(self, monitor_queue: Queue):\n",
+        "    def __init__(self, monitor_queue: Queue, c):\n",
         "        # вызываем конструктор базового класса\n",
         "        super().__init__()\n",
         "        # мы знаем только очередь монитора безопасности для взаимодействия с другими сущностями\n",
@@ -547,6 +546,7 @@
         "        self.monitor_queue = monitor_queue\n",
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
+        "        condition = {\"none\"}\n",
         "\n",
         "    def entity_queue(self):\n",
         "        return self._own_queue\n",
@@ -561,6 +561,12 @@
         "                if event.operation == \"set_mode\":\n",
         "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
         "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
+        "                    self.condition = event.parameters\n",
+        "                    sleep(0.2)\n",
+        "                    attempts -= 1\n",
+        "                if event.operation == \"send_condition\":\n",
+        "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает состояние режима {event.parameters}\")\n",
+        "                    print(f\"[{self.__class__.__name__}] отправленные сведения: {self.condition}!\")\n",
         "                    sleep(0.2)\n",
         "                    attempts -= 1\n",
         "            except Empty:\n",
@@ -602,13 +608,23 @@
         "\n",
         "    # основной код сущности\n",
         "    def run(self):\n",
-        "      print(f'[{self.__class__.__name__}] завершение работы')\n",
-        ""
+        "        print(f'[{self.__class__.__name__}] старт')\n",
+        "        mode_4 = {}\n",
+        "        event_4 = Event(source=self.__class__.__name__,\n",
+        "              destination='LightsGPIO',\n",
+        "              operation='send_condition',\n",
+        "              parameters=json.dumps(mode_4)\n",
+        "              )\n",
+        "\n",
+        "        # self.monitor_queue.put(event)\n",
+        "        # self.monitor_queue.put(event_2)\n",
+        "        self.monitor_queue.put(event_4)\n",
+        "        print(f'[{self.__class__.__name__}] завершение работы')\n"
       ],
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": 368,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -631,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 369,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -648,7 +664,7 @@
       "source": [
         "monitor = Monitor(monitor_events_queue)\n",
         "control_system = ControlSystem(monitor_events_queue)\n",
-        "lights_gpio = LightsGPIO(monitor_events_queue)\n",
+        "lights_gpio = LightsGPIO(monitor_events_queue, {\"direction_1\": \"off\", \"direction_2\": \"off\"})\n",
         "self_diagnostics = SelfDiagnostics(monitor_events_queue)"
       ]
     },
@@ -672,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 370,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -683,23 +699,9 @@
           },
           "type": "CODE"
         },
-        "id": "s1mZfb2i4-pW",
-        "outputId": "1d6bba60-0ecb-4e6e-9f55-fc8f8ac82bb8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "s1mZfb2i4-pW"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[монитор] регистрируем сущность ControlSystem\n",
-            "[монитор] регистрируем сущность LightsGPIO\n",
-            "[монитор] регистрируем сущность SelfDiagnostics\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "monitor.add_entity_queue(control_system.__class__.__name__, control_system.entity_queue())\n",
         "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())\n",
@@ -746,57 +748,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 371,
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": false,
-          "hide_output_from_viewers": false,
-          "node_id": "iPZmNnkpcdyoIXv318yymh",
-          "report_properties": {
-            "y": 194
-          },
-          "type": "CODE"
-        },
-        "id": "PSplikk24-pY",
-        "outputId": "3e9e06ff-2292-4414-8054-e0e967d28cd7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[монитор] старт[ControlSystem] старт\n",
-            "\n",
-            "[LightsGPIO] старт[ControlSystem] отправляем тестовый запрос\n",
-            "\n",
-            "[SelfDiagnostics] завершение работы\n",
-            "[ControlSystem] завершение работы\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"green\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'green'}\n",
-            "[монитор] событие не разрешено политиками безопасности\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'green', 'direction_2': 'turn_right'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}')\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='diagnostics_mode', parameters='{}')\n",
-            "[монитор] событие не разрешено политиками безопасности\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}!\n",
-            "[LightsGPIO] завершение работы\n",
-            "[монитор] проверяем запрос ControlEvent(operation='stop')\n",
-            "[монитор] завершение работы\n"
-          ]
-        }
-      ],
       "source": [
         "monitor.start()\n",
         "control_system.start()\n",
         "lights_gpio.start()\n",
         "self_diagnostics.start()\n",
         "sleep(2)"
-      ]
+      ],
+      "metadata": {
+        "id": "0s2HyD-Dv3Gy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -818,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 372,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
