--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -538,7 +538,7 @@
         "\n",
         "class LightsGPIO(Process):\n",
         "\n",
-        "    def __init__(self, monitor_queue: Queue, c):\n",
+        "    def __init__(self, monitor_queue: Queue, conditions):\n",
         "        # вызываем конструктор базового класса\n",
         "        super().__init__()\n",
         "        # мы знаем только очередь монитора безопасности для взаимодействия с другими сущностями\n",
@@ -546,7 +546,6 @@
         "        self.monitor_queue = monitor_queue\n",
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
-        "        condition = {\"none\"}\n",
         "\n",
         "    def entity_queue(self):\n",
         "        return self._own_queue\n",
@@ -561,12 +560,12 @@
         "                if event.operation == \"set_mode\":\n",
         "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает изменение режима {event.parameters}\")\n",
         "                    print(f\"[{self.__class__.__name__}] новый режим: {event.parameters}!\")\n",
-        "                    self.condition = event.parameters\n",
+        "                    self.conditions = event.parameters\n",
         "                    sleep(0.2)\n",
         "                    attempts -= 1\n",
-        "                if event.operation == \"send_condition\":\n",
-        "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает состояние режима {event.parameters}\")\n",
-        "                    print(f\"[{self.__class__.__name__}] отправленные сведения: {self.condition}!\")\n",
+        "                if event.operation == \"send_conditions\":\n",
+        "                    print(f\"[{self.__class__.__name__}] {event.source} запрашивает состояние режима {self.conditions}\")\n",
+        "                    print(f\"[{self.__class__.__name__}] отправленные сведения: {self.conditions}!\")\n",
         "                    sleep(0.2)\n",
         "                    attempts -= 1\n",
         "            except Empty:\n",
@@ -612,7 +611,7 @@
         "        mode_4 = {}\n",
         "        event_4 = Event(source=self.__class__.__name__,\n",
         "              destination='LightsGPIO',\n",
-        "              operation='send_condition',\n",
+        "              operation='send_conditions',\n",
         "              parameters=json.dumps(mode_4)\n",
         "              )\n",
         "\n",
@@ -624,7 +623,7 @@
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -647,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -688,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -699,9 +698,23 @@
           },
           "type": "CODE"
         },
-        "id": "s1mZfb2i4-pW"
+        "id": "s1mZfb2i4-pW",
+        "outputId": "eea367da-9b43-4b2e-980d-89653f3c68f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[монитор] регистрируем сущность ControlSystem\n",
+            "[монитор] регистрируем сущность LightsGPIO\n",
+            "[монитор] регистрируем сущность SelfDiagnostics\n"
+          ]
+        }
+      ],
       "source": [
         "monitor.add_entity_queue(control_system.__class__.__name__, control_system.entity_queue())\n",
         "monitor.add_entity_queue(lights_gpio.__class__.__name__, lights_gpio.entity_queue())\n",
@@ -756,10 +769,38 @@
         "sleep(2)"
       ],
       "metadata": {
-        "id": "0s2HyD-Dv3Gy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0s2HyD-Dv3Gy",
+        "outputId": "6439ec94-d829-443b-ff32-8b883e8e712c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[монитор] старт\n",
+            "[ControlSystem] старт\n",
+            "[LightsGPIO] старт\n",
+            "[SelfDiagnostics] старт[ControlSystem] отправляем тестовый запрос\n",
+            "\n",
+            "[ControlSystem] завершение работы[SelfDiagnostics] завершение работы\n",
+            "\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'turn_right', 'direction_2': 'red'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}')\n",
+            "[монитор] обрабатываем событие Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
+            "[монитор] отправляем запрос Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}!\n",
+            "[LightsGPIO] SelfDiagnostics запрашивает состояние режима {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
+            "[LightsGPIO] отправленные сведения: {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}!\n",
+            "[LightsGPIO] завершение работы\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -781,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
