--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 51,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 52,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 53,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -258,18 +258,16 @@
         "# список разрешенных сочетаний сигналов светофора\n",
         "# любые сочетания, отсутствующие в этом списке, запрещены\n",
         "traffic_lights_allowed_configurations = [\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"green\"},\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"red\"},\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"yellow\"},\n",
-        "    {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\"},\n",
-        "    {\"direction_1\": \"off\", \"direction_2\": \"off\"},\n",
-        "    {\"direction_1\": \"green\", \"direction_2\": \"red\"},\n",
-        "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\"},\n",
-        "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\"},\n",
-        "    {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"},\n",
-        "    {\"direction_1\": \"red\", \"direction_2\": \"turn_left\"},\n",
-        "    {\"direction_1\": \"turn_left\", \"direction_2\": \"green\"},\n",
-        "    {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"green\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"off\", \"direction_2\": \"off\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"},\n",
+        "    {\"direction_1\": \"green\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"},\n",
+        "    {\"direction_1\": \"yellow_blinking\", \"direction_2\": \"yellow_blinking\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"},\n",
+        "\n",
         "]\n",
         "\n",
         "\n",
@@ -424,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 54,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -463,7 +461,10 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
-        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"green\"}\n",
+        "\n",
+        "\n",
+        "\n",
+        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
         "\n",
         "        # запрос для сущности WorkerB - \"скажи hello\"\n",
         "        event = Event(source=self.__class__.__name__,\n",
@@ -472,14 +473,14 @@
         "                      parameters=json.dumps(mode)\n",
         "                      )\n",
         "\n",
-        "        mode_2 = {\"direction_1\": \"green\", \"direction_2\": \"turn_right\"}\n",
+        "        mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
         "        event_2 = Event(source=self.__class__.__name__,\n",
         "                      destination='LightsGPIO',\n",
         "                      operation='set_mode',\n",
         "                      parameters=json.dumps(mode_2)\n",
         "                      )\n",
-        "        mode_3 = {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
+        "        mode_3 = {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
         "        event_3 = Event(source=self.__class__.__name__,\n",
         "                      destination='LightsGPIO',\n",
@@ -517,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 55,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -538,7 +539,7 @@
         "\n",
         "class LightsGPIO(Process):\n",
         "\n",
-        "    def __init__(self, monitor_queue: Queue, conditions):\n",
+        "    def __init__(self, monitor_queue: Queue):\n",
         "        # вызываем конструктор базового класса\n",
         "        super().__init__()\n",
         "        # мы знаем только очередь монитора безопасности для взаимодействия с другими сущностями\n",
@@ -546,6 +547,8 @@
         "        self.monitor_queue = monitor_queue\n",
         "        # создаём собственную очередь, в которую монитор сможет положить сообщения для этой сущности\n",
         "        self._own_queue = Queue()\n",
+        "\n",
+        "        self.conditions = {\"direction_1\": \"off\", \"direction_2\": \"off\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"off\"}\n",
         "\n",
         "    def entity_queue(self):\n",
         "        return self._own_queue\n",
@@ -623,7 +626,7 @@
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": 36,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -646,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 57,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -663,7 +666,7 @@
       "source": [
         "monitor = Monitor(monitor_events_queue)\n",
         "control_system = ControlSystem(monitor_events_queue)\n",
-        "lights_gpio = LightsGPIO(monitor_events_queue, {\"direction_1\": \"off\", \"direction_2\": \"off\"})\n",
+        "lights_gpio = LightsGPIO(monitor_events_queue)\n",
         "self_diagnostics = SelfDiagnostics(monitor_events_queue)"
       ]
     },
@@ -687,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 58,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -699,7 +702,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "eea367da-9b43-4b2e-980d-89653f3c68f6",
+        "outputId": "57a83a1c-9bd5-4d33-891c-f6a46f3aa739",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -773,9 +776,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0s2HyD-Dv3Gy",
-        "outputId": "6439ec94-d829-443b-ff32-8b883e8e712c"
+        "outputId": "72b335a7-ae5f-443c-d4d9-22f8e287aa7c"
       },
-      "execution_count": 39,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,20 +786,20 @@
           "text": [
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
-            "[LightsGPIO] старт\n",
-            "[SelfDiagnostics] старт[ControlSystem] отправляем тестовый запрос\n",
+            "[ControlSystem] отправляем тестовый запрос\n",
+            "[ControlSystem] завершение работы[LightsGPIO] старт\n",
             "\n",
-            "[ControlSystem] завершение работы[SelfDiagnostics] завершение работы\n",
-            "\n",
-            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}')\n",
-            "[монитор] проверяем конфигурацию {'direction_1': 'turn_right', 'direction_2': 'red'}\n",
-            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}')\n",
+            "[SelfDiagnostics] старт\n",
+            "[SelfDiagnostics] завершение работы\n",
+            "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
+            "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'yellow', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
+            "[монитор] отправляем запрос Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] обрабатываем событие Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
             "[монитор] отправляем запрос Event(source='SelfDiagnostics', destination='LightsGPIO', operation='send_conditions', parameters='{}')\n",
-            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
-            "[LightsGPIO] новый режим: {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}!\n",
-            "[LightsGPIO] SelfDiagnostics запрашивает состояние режима {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}\n",
-            "[LightsGPIO] отправленные сведения: {\"direction_1\": \"turn_right\", \"direction_2\": \"red\"}!\n",
+            "[LightsGPIO] ControlSystem запрашивает изменение режима {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] новый режим: {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
+            "[LightsGPIO] SelfDiagnostics запрашивает состояние режима {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}\n",
+            "[LightsGPIO] отправленные сведения: {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}!\n",
             "[LightsGPIO] завершение работы\n"
           ]
         }
@@ -822,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 60,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
