--- a/cyberimmunity_traffic_lights_example.ipynb
+++ b/cyberimmunity_traffic_lights_example.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 61,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 62,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 63,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 64,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -461,25 +461,22 @@
         "        print(f'[{self.__class__.__name__}] старт')\n",
         "        print(f'[{self.__class__.__name__}] отправляем тестовый запрос')\n",
         "\n",
+        "        # mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
         "\n",
+        "        # # запрос для сущности WorkerB - \"скажи hello\"\n",
+        "        # event = Event(source=self.__class__.__name__,\n",
+        "        #               destination='LightsGPIO',\n",
+        "        #               operation='set_mode',\n",
+        "        #               parameters=json.dumps(mode)\n",
+        "        #               )\n",
         "\n",
+        "        # mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
-        "        mode = {\"direction_1\": \"green\", \"direction_2\": \"red\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"off\"}\n",
-        "\n",
-        "        # запрос для сущности WorkerB - \"скажи hello\"\n",
-        "        event = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode)\n",
-        "                      )\n",
-        "\n",
-        "        mode_2 = {\"direction_1\": \"yellow\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"on\", \"direction_2_arrow\" : \"on\"}\n",
-        "\n",
-        "        event_2 = Event(source=self.__class__.__name__,\n",
-        "                      destination='LightsGPIO',\n",
-        "                      operation='set_mode',\n",
-        "                      parameters=json.dumps(mode_2)\n",
-        "                      )\n",
+        "        # event_2 = Event(source=self.__class__.__name__,\n",
+        "        #               destination='LightsGPIO',\n",
+        "        #               operation='set_mode',\n",
+        "        #               parameters=json.dumps(mode_2)\n",
+        "        #               )\n",
         "        mode_3 = {\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\" : \"off\", \"direction_2_arrow\" : \"on\"}\n",
         "\n",
         "        event_3 = Event(source=self.__class__.__name__,\n",
@@ -518,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 65,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -626,7 +623,7 @@
       "metadata": {
         "id": "OU4QLeivROiP"
       },
-      "execution_count": 56,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -649,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 67,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -690,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 68,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -702,7 +699,7 @@
           "type": "CODE"
         },
         "id": "s1mZfb2i4-pW",
-        "outputId": "57a83a1c-9bd5-4d33-891c-f6a46f3aa739",
+        "outputId": "6def7496-cd1f-4a44-f904-42c8be66929f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -776,9 +773,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0s2HyD-Dv3Gy",
-        "outputId": "72b335a7-ae5f-443c-d4d9-22f8e287aa7c"
+        "outputId": "341b1ce0-10bb-4cbf-b9ce-79d04d6bd62e"
       },
-      "execution_count": 59,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,10 +783,10 @@
           "text": [
             "[монитор] старт\n",
             "[ControlSystem] старт\n",
-            "[ControlSystem] отправляем тестовый запрос\n",
-            "[ControlSystem] завершение работы[LightsGPIO] старт\n",
+            "[ControlSystem] отправляем тестовый запрос[LightsGPIO] старт\n",
             "\n",
-            "[SelfDiagnostics] старт\n",
+            "[SelfDiagnostics] старт[ControlSystem] завершение работы\n",
+            "\n",
             "[SelfDiagnostics] завершение работы\n",
             "[монитор] обрабатываем событие Event(source='ControlSystem', destination='LightsGPIO', operation='set_mode', parameters='{\"direction_1\": \"red\", \"direction_2\": \"yellow\", \"direction_1_arrow\": \"off\", \"direction_2_arrow\": \"on\"}')\n",
             "[монитор] проверяем конфигурацию {'direction_1': 'red', 'direction_2': 'yellow', 'direction_1_arrow': 'off', 'direction_2_arrow': 'on'}\n",
@@ -825,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 70,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
